# env-tests

./: README.md
.github/actions/nox_sessions/: action.yml
.github/actions/slack-notify/: action.yml
.github/actions/terraform_check/: action.yml
.github/actions/terraform_deploy/: action.yml
.github/workflows/: _reusable_CICD.yml  calling.yml  calling.yml.disabled  envs.yml  p3_deployments.yml  pr-only.yml  template_cicd.yml
services/xxx/infra/: example.txt  main.tf  output.json  plan  terraform.tfstate  terraform.tfstate.backup
services/xxx/infra/.terraform/: terraform.tfstate
services/xxx/infra/envs/: dev.tfvars  prod.tfvars
services/xxx/py/: noxfile.py  pyproject.toml
services/xxx/py/src/xxx/: __init__.py
services/yyy/py/: pyproject.toml
services/yyy/py/src/yyy/: __init__.py
