[project]
name = "xxx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jakub Cehak", email = "kubo.cehak@gmail.com" }
]
requires-python = ">=3.10"

dependencies = [
    "python-dotenv",
    "pydantic",
    "pydantic_settings",
    "pyyaml",
]

[dependency-groups]
dev = [
   "nox",
   "pytest",
   "coverage[toml]",
   "python-dotenv",
]

[project.optional-dependencies]
nox = [
  "nox",
  "python-dotenv"
]


[tool.uv]
default-groups = ["dev"]


[project.scripts]
xxx = "xxx:main"



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


